Make visibility utility classes more robust, fix max-width calculation bug

--- a/assets/_sass/component/_footer.scss
+++ b/assets/_sass/component/_footer.scss
@@ -35,7 +35,7 @@ main { flex: 1; }
 }
 
 .footer .logo {
-    @media(max-width: $bp-md) {
+    @media (max-width: $bp-md - 1px) {
         margin-bottom: rem-calc(10px);
         max-width: rem-calc(110px);
     }
